--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 				<canvas id="canvas"></canvas>
 				<script src="Sorting Visualizer/JS/canvasmanpulation.js"></script>
+				<script src="Sorting Visualizer/JS/otherfunction.js"></script>
 				<script src="Sorting Visualizer/JS/bargeneration.js"></script>
+				<script src="Sorting Visualizer/JS/sorting.js"></script>
 
 				<div id="generalAnimationControlSection" class="mydivs">
 					<!-- Table for buttons to control general animation (play/pause/undo/etc) -->
