--- a/Conways Game/ConwaysGame.html
+++ b/Conways Game/ConwaysGame.html
@@ -17,12 +17,10 @@
 	
 	<body>
 		
+		<button onclick="createCheckBoard()">New Board</button>
 		<canvas id="canv1"></canvas>
-		<script src="Conways Game/JS/canvasmanpulation.js"></script>
-		<script src="Conways Game/JS/otherfunction.js"></script>
-		<script src="Conways Game/JS/checkboard.js"></script>
-
-
+		<script src="Conways Game/JS/variables.js"></script>
+		<script src="Conways Game/JS/functions.js"></script>
 
 	</body>
 
