--- a/Sorting Visualizer/SortingVisualizer.html
+++ b/Sorting Visualizer/SortingVisualizer.html
@@ -27,7 +27,8 @@
 					<table id="AlgorithmSpecificControls" class="mytables">
 						<tr>
 							<td>
-								No of Bars: <select id="nob">
+								<label id="nobL" for="noofbars">No of Bars:</label>
+								<select id="nob" onclick="generateBar()">
 									<option value="50">50</option>
 									<option value="75">75</option>
 									<option value="100">100</option>
@@ -36,7 +37,8 @@
 								</select>
 							</td>
 							<td>
-								Speed: <select id="spd">
+								<label id="spdL" for="speed">Speed:</label>
+								<select id="spd">
 									<option value="0.5">0.5 X</option>
 									<option value="0.75">0.75 X</option>
 									<option value="1" selected>1 X</option>
@@ -45,10 +47,20 @@
 								</select>
 							</td>
 							<td>
+								<label id="ssmL" for="sort_tech">Select Sort Mechanism:</label> 
+								<select id="ssm">
+									<option value="1">Bubble Sort</option>
+									<option value="2">Selection Sort</option>
+									<option value="3">Insertion Sort</option>
+									<option value="4">Merge Sort</option>
+									<option value="5">Quick Sort</option>
+								</select>
+							</td>
+							<td>
 								<button id="bargenerate" onclick="generateBar()">GENERATE BARS</button>
 							</td>
 							<td>
-								<button id="sort" onclick="bubbleSort(BAR_ARRAY)" disabled="true">START SORTING</button>
+								<button id="sort" onclick="sortCall()" disabled="true">START SORTING</button>
 							</td>
 						</tr>
 					</table>
@@ -57,7 +69,6 @@
 				<canvas id="canvas"></canvas>
 				<script src="Sorting Visualizer/JS/elements.js"></script>
 				<script src="Sorting Visualizer/JS/variables.js"></script>
-				
 				<script src="Sorting Visualizer/JS/functions.js"></script>
 				<script src="Sorting Visualizer/JS/sorting_functions.js"></script>
 
@@ -70,7 +81,7 @@
 			</div> <!-- mainContent -->
 
 			<div id="footer" class="mydivs">
-				
+				Made By Omkar Singh
 			</div>
 			
 		</div> <!-- container -->
